--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.3",
-    "mongodb": "^4.4.0"
+    "fs": "0.0.1-security",
+    "gridfs-stream": "^1.1.1",
+    "mongodb": "^4.4.0",
+    "mongoose": "^6.2.8",
+    "path": "^0.12.7"
   }
 }
